--- a/config/user.properties
+++ b/config/user.properties
@@ -20,7 +20,7 @@ local.port=3129
 proxy.host=localhost
 
 # Port number of remote proxy (mandatory)
-proxy.port=80
+#proxy.port=800
 
 # Proxy domain (mandatory)
 proxy.domain=DESKTOPQ
@@ -28,4 +28,4 @@ proxy.domain=DESKTOPQ
 # Username (mandatory)
 proxy.username=Quasimodo
 
-font.size=14
+font.size=15
