--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -22,8 +22,8 @@
 #  See the License for the specific language governing permissions and limitations under the License.
 #
 
-org.slf4j.simpleLogger.defaultLogLevel=info
+org.slf4j.simpleLogger.defaultLogLevel=debug
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.levelInBrackets=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss:SSS
-org.slf4j.simpleLogger.logFile=bkpf.log
+org.slf4j.simpleLogger.logFile=prfoom.log
