--- a/config/user.properties
+++ b/config/user.properties
@@ -28,4 +28,7 @@ proxy.domain=DESKTOPQ
 # Username (mandatory)
 proxy.username=Quasimodo
 
+proxy.test.url=http://example.com
+
 font.size=15
+proxy.port = 80
